# app/Models/User.php
@@ -21,6 +21,10 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'employee_code',
+        'roles',
+        'last_login_at',
+        'avatar_url',
     ];
 
     /**
@@ -33,6 +37,10 @@ class User extends Authenticatable
         'remember_token',
     ];
 
+    protected $attributes = [
+        'roles' => '[]',
+    ];
+
     /**
      * Get the attributes that should be cast.
      *
@@ -43,6 +51,8 @@ class User extends Authenticatable
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'last_login_at' => 'datetime',
+            'roles' => 'array',
         ];
     }
 }
